force-app/main/default/objects/Creditsafe_Company_Negative_Info_DE__c/Creditsafe_Company_Negative_Info_DE__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyNegativeInformationDEV2</description>
    <label>Creditsafe Company Negative Info DE</label>
    <nameField>
        <displayFormat>NI-{000000}</displayFormat>
        <label>Creditsafe Company Negative Info DE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Negative Info DE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>