force-app/main/default/objects/Creditsafe_Company_Negative_Info_DE__c/fields/Has_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Has_Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there is bankruptcy information for the company.</description>
    <label>Has Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>