force-app/main/default/objects/Creditsafe_Company_Negative_Info_DE__c/fields/Trustee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustee_First_Name__c</fullName>
    <description>First name trustee.</description>
    <label>Trustee First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>